<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_titleReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowreview_titlereview"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rowreview_calificaciones"
        android:textColor="@color/amber_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_titleReview"
        app:layout_constraintStart_toEndOf="@+id/txt_titleReview"
        app:layout_constraintTop_toTopOf="@+id/txt_titleReview" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="@+id/txt_calificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_calificacion"
        app:layout_constraintTop_toTopOf="@+id/txt_calificacion" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowreview_descripciones"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_titleReview"
        app:layout_constraintTop_toBottomOf="@+id/txt_titleReview" />


</androidx.constraintlayout.widget.ConstraintLayout>